# keeks

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Makefile  README.md  bankroll.html  binary_strategies.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  simulators.html  utils.html
.cursor/rules/: project_overview.mdc  testing.mdc
.github/workflows/: docs.yml  publish-docs.yml  publish-pypi.yml  test.yml
_modules/: index.html
_modules/keeks/: utils.html
_modules/keeks/binary_strategies/: base.html  kelly.html  simple.html
_modules/keeks/simulators/: random_binary.html  random_uncertain_binary.html  repeated_binary.html
_sources/: binary_strategies.rst.txt  simulators.rst.txt
docs/: README.md  requirements.txt
docs/source/: CNAME  binary_strategies.rst  conf.py  getting_started.rst  index.rst  simulators.rst  utils.rst
docs/source/_static/: custom.css
doctrees/: bankroll.doctree  binary_strategies.doctree  environment.pickle  getting_started.doctree  index.doctree  simulators.doctree  utils.doctree
examples/: README.md  simple_bets.py  st_petersburg_comparison.py  st_petersburg_paradox.py  strategy_comparison.py
examples/output/: st_petersburg_paradox.csv  st_petersburg_strategies_comparison.csv  strategy_comparison.csv
html/: .buildinfo  bankroll.html  binary_strategies.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  simulators.html  utils.html
html/_modules/: index.html
html/_modules/keeks/: utils.html
html/_modules/keeks/binary_strategies/: simple.html
html/_modules/keeks/simulators/: random_binary.html  random_uncertain_binary.html  repeated_binary.html
html/_sources/: bankroll.rst.txt  binary_strategies.rst.txt  index.rst.txt
keeks/: __init__.py  bankroll.py  opportunity.py  strategies.py  utils.py
keeks/binary_strategies/: __init__.py  base.py  kelly.py  simple.py
keeks/simulators/: __init__.py  random_binary.py  random_uncertain_binary.py  repeated_binary.py
keeks/strategies/: __init__.py  base.py  ensemble.py  kelly.py  simple.py
tests/: test_Bankroll.py  test_KellyCriterion.py  test_NaiveStrategy.py  test_bankruptcy_protection.py  test_cppi_strategy.py  test_drawdown_adjusted_kelly.py  test_dynamic_bankroll_management.py  test_fixed_fraction_strategy.py  test_kelly_criterion.py  test_merton_share.py  test_naive_strategy.py  test_optimal_f.py  test_strategy_entry_price.py  test_utility_functions.py
